--- a/hugo.toml
+++ b/hugo.toml
@@ -11,10 +11,10 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
 [params]
     brand = "Taylor Martin"                      # name of your site - appears in the sidebar
     # remote_brand_image = 'https://github.com/USERNAME.png' # path to a remote file
-    brand_image = "personal-blog/images/goldPig.png"    # path to the image shown in the sidebar
+    brand_image = "images/goldPig.png"    # path to the image shown in the sidebar
     description = "Things that interest me" # Used as default meta description if not specified in front matter
     dark_mode = true                      # optional - defaults to false
-    favicon = "personal-blog/favicon/favicon-32x32.png"             # path to favicon (defaults to favicon.png)
+    favicon = "favicon/favicon-32x32.png"             # path to favicon (defaults to favicon.png)
 
     front_page_content = ["posts"] # Equivalent to the default value, add page bundle names to include them on the front page.
 
