--- a/hugo.toml
+++ b/hugo.toml
@@ -11,7 +11,7 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
 [params]
     brand = "Taylor Martin"                      # name of your site - appears in the sidebar
     # remote_brand_image = 'https://github.com/USERNAME.png' # path to a remote file
-    brand_image = "images/goldPig.png"    # path to the image shown in the sidebar
+    brand_image = "/images/goldPig.png"    # path to the image shown in the sidebar
     description = "Things that interest me" # Used as default meta description if not specified in front matter
     dark_mode = true                      # optional - defaults to false
     favicon = "favicon/favicon-32x32.png"             # path to favicon (defaults to favicon.png)
@@ -26,10 +26,10 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
         # Limit:        If the files should be listed, how many should be shown.
     menu = [
         
-        {Name = "About", URL = "content/about/", HasChildren = false},
+        {Name = "About", URL = "/about/", HasChildren = false},
                 # Example:
         # ... /content/posts/introducing-poison.md
-        {Name = "Posts", URL = "/content/posts/", Pre = "Recent", HasChildren = true, Limit = 5},
+        {Name = "Posts", URL = "/posts/", Pre = "Recent", HasChildren = true, Limit = 5},
             # Example of a list without a subheading or limit.
         {Name = "Project Tracker", URL = "/projects/", HasChildren = false},
     ]
