--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
-baseURL = "https://taymarlortin.github.io/personal-blog/"
+baseURL = "https://taylormartindev.github.io/"
 languageCode = "en-us"
 theme = "poison"
-canonifyURLs = false
+#canonifyURLs = false, thats the default
 pagination.pagerSize = 10
 pluralizelisttitles = false   # removes the automatically appended "s" on sidebar entries
 #ignoreLogs = ['warning-goldmark-raw-html']
@@ -40,7 +40,7 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
    # email_url = "mailto://user@domain"
     #facebook_url = "https://facebook.com"
     #flickr_url = "https://flickr.com"
-    github_url = "https://github.com/taymarlortin"
+    github_url = "https://github.com/taylormartindev"
     #gitlab_url = "https://gitlab.com"
     #instagram_url = "https://instagram.com"
     linkedin_url = "https://linkedin.com/in/taylor-a-martin"
