--- a/hugo.toml
+++ b/hugo.toml
@@ -37,7 +37,7 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
 
     # Links to your socials.  Comment or delete any you don't need/use. 
     #discord_url = "https://discord.com"
-   # email_url = "mailto://user@domain"
+    email_url = "mailto://taylor.au.martin@gmail.com"
     #facebook_url = "https://facebook.com"
     #flickr_url = "https://flickr.com"
     github_url = "https://github.com/taylormartindev"
@@ -114,3 +114,4 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
 [taxonomies]
     series = 'series'
     tags = 'tags'
+    author = 'authors'
